Add support for skipping values dynamically
    This commit adds support for variable entries to be skipped dynamically
    by specifying an attribute named "skip_when". The following role
    variables are currently supported:

    * shorewall6_hosts
    * shorewall6_interfaces
    * shorewall6_policy
    * shorewall6_routes
    * shorewall6_rules
    * shorewall6_snat
    * shorewall6_tunnels
    * shorewall6_zones

--- a/templates/etc/shorewall6/policy.j2
+++ b/templates/etc/shorewall6/policy.j2
@@ -11,6 +11,7 @@
 #
 ###############################################################################
 #SOURCE		DEST		POLICY	LOGLEVEL	LIMIT	CONNLIMIT
-{% for policy in shorewall6_host_policy|d(shorewall6_group_policy|d(shorewall6_policy)) %}
+{% set _policies = shorewall6_host_policy|d(shorewall6_group_policy|d(shorewall6_policy)) %}
+{% for policy in _policies if not policy.skip_when|d()|bool %}
 {{ policy.source }} {{ policy.dest }} {{ policy.policy }} {{ policy.log_level|d('-') }} {{ policy.limit|d('-') }} {{ policy.connlimit|d() }}
 {% endfor %}
