--- a/templates/etc/shorewall6/interfaces.j2
+++ b/templates/etc/shorewall6/interfaces.j2
@@ -12,6 +12,7 @@
 ?FORMAT 2
 ###############################################################################
 #ZONE		INTERFACE		OPTIONS
-{% for iface in shorewall6_interfaces + shorewall6_group_interfaces + shorewall6_host_interfaces %}
+{% set _interfaces = shorewall6_interfaces + shorewall6_group_interfaces + shorewall6_host_interfaces %}
+{% for iface in _interfaces if not iface.skip_when|d()|bool %}
 {{ iface.zone }} {{ iface.interface }} {{ iface.options|d([])|join(',') }}
 {% endfor %}
