--- a/templates/etc/shorewall6/routes.j2
+++ b/templates/etc/shorewall6/routes.j2
@@ -10,6 +10,7 @@
 #
 ###############################################################################
 #PROVIDER		DEST			GATEWAY		DEVICE	OPTIONS
-{% for entry in shorewall6_routes + shorewall6_group_routes + shorewall6_host_routes %}
-{{ entry.provider }} {{ entry.dest }} {{ entry.gateway|d('-') }} {{ entry.device|d('-') }} {{ entry.options|d([])|join(',') }}
+{% set _routes = shorewall6_routes + shorewall6_group_routes + shorewall6_host_routes %}
+{% for route in _routes if not route.skip_when|d()|bool %}
+{{ route.provider }} {{ route.dest }} {{ route.gateway|d('-') }} {{ route.device|d('-') }} {{ route.options|d([])|join(',') }}
 {% endfor %}
