Simplify combine call in params template

--- a/templates/etc/shorewall6/params.j2
+++ b/templates/etc/shorewall6/params.j2
@@ -24,7 +24,7 @@
 #	net	eth0		-	dhcp,nosmurfs
 #
 ###############################################################################
-{% set params = shorewall6_params|d({}) | combine(shorewall6_group_params|d({})) | combine(shorewall6_host_params|d({})) %}
+{% set params = shorewall6_params|d({}) | combine(shorewall6_group_params|d({}), shorewall6_host_params|d({})) %}
 {% for param, value in params|dictsort %}
 {{ param }}={{ value|join(',')|quote if value is iterable and value is not string else value|quote }}
 {% endfor %}
