--- a/templates/etc/shorewall6/params.j2
+++ b/templates/etc/shorewall6/params.j2
@@ -26,5 +26,5 @@
 ###############################################################################
 {% set params = shorewall6_params|d({}) | combine(shorewall6_group_params|d({}), shorewall6_host_params|d({})) %}
 {% for param, value in params|dictsort %}
-{{ param }}={{ value|join(',')|quote if value is iterable and value is not string else value|quote }}
+{{ param }}={{ value|flatten|join(',')|quote if value is iterable and value is not string else value|quote }}
 {% endfor %}
